# LARS-Hardware-Interface

./: .clang-format  .gitattributes  .gitignore  README.md
.devcontainer/: Dockerfile  devcontainer.json
.devcontainer/script/: container_start_microros_agent.sh  host_add_udev_rules.sh  windows_devcontainer_setup.ps1
.devcontainer/udev/: 99-hardware-interface.rules
PCB/: caudri_drawing_sheet.kicad_wks  hardware_interface.kicad_pro  hardware_interface.kicad_sym
PCB/KiCad/: caudri_drawing_sheet.kicad_wks  fp-lib-table  hardware_interface.bak  hardware_interface.kicad_pcb  hardware_interface.kicad_pro  hardware_interface.kicad_sch  hardware_interface.kicad_sym  sym-lib-table
PCB/KiCad/hardware_interface.pretty/: 2920L400_15MR.kicad_mod  430182043816.kicad_mod  860020372006.kicad_mod  BAT54SFILM.kicad_mod  BZT52B3V3.kicad_mod  BZT52C3V3.kicad_mod  CAuDri Logo.kicad_mod  GCT_USB4105-GF-A.kicad_mod  JST_XH_B2B-XH-A_1x02_P2.50mm_Vertical.kicad_mod  JST_XH_B3B-XH-A_1x03_P2.50mm_Vertical.kicad_mod  JST_XH_B4B-XH-A_1x04_P2.50mm_Vertical.kicad_mod  JST_XH_B5B-XH-A_1x05_P2.50mm_Vertical.kicad_mod  JST_XH_B6B-XH-A_1x06_P2.50mm_Vertical.kicad_mod  LD1117AS33TR.kicad_mod  LED_0603_1608Metric_Blue.kicad_mod  LED_0603_1608Metric_Green.kicad_mod  LED_0603_1608Metric_Red.kicad_mod  L_0805_2012Metric.kicad_mod  MIC2039AYM6-TR.kicad_mod  OPA2834IDGKR.kicad_mod  PTPS2117DRLR.kicad_mod  PinHeader_1x02_P2.54mm_Jumper.kicad_mod  PinHeader_1x06_P2.54mm_Vertical.kicad_mod  SN74S1051DR.kicad_mod  STM32F429ZIT6TR.kicad_mod  STS321050U182.kicad_mod  TCAN1057AVDRQ1.kicad_mod  WE-SPXO_IQXO-791.kicad_mod  XT30UPB-M.kicad_mod  Z1SMA5.6.kicad_mod
PCB/KiCad/hardware_interface.pretty/3D_Models/: 860020372006.step  BAT54SFILM.step  PinHeader_1x02_Jumper.step  SOD-323_COB.step  STM32F429ZIT6TR.step
PCB/KiCad/sheets/: LARS_Analog.kicad_sch  LARS_Bus.kicad_sch  LARS_IO_Protection.kicad_sch  LARS_IO_interfaces.kicad_sch  LARS_LEDs.kicad_sch  LARS_Microcontroller.kicad_sch  LARS_Power_Distribution.kicad_sch
PCB/hardware_interface.pretty/: 2920L400_15MR.kicad_mod  430182043816.kicad_mod  860020372006.kicad_mod  LD1117AS33TR.kicad_mod  LED_0603_1608Metric_Blue.kicad_mod  LED_0603_1608Metric_Green.kicad_mod  OPA2834IDGKR.kicad_mod  PTPS2117DRLR.kicad_mod  STM32F429ZIT6TR.kicad_mod  XT30UPB-M.kicad_mod  Z1SMA5.6.kicad_mod
PCB/manufacturing/JLCPCB/: bom.csv  designators.csv  netlist.ipc  positions.csv
PCB/sheets/: LARS_Analog.kicad_sch  LARS_Bus.kicad_sch
firmware/: .clang-format  build.sh
firmware/devices/HardwareInterface/: CMakeLists.txt  main.cpp
firmware/devices/HardwareInterface/board/: CMakeLists.txt  HardwareInterface.ioc
firmware/devices/HardwareInterface/board/Core/Inc/: FreeRTOSConfig.h  main.h  stm32f4xx_hal_conf.h  stm32f4xx_it.h
firmware/devices/HardwareInterface/board/Core/Src/: main.c  stm32f4xx_hal_msp.c  stm32f4xx_it.c
firmware/devices/HardwareInterface/board/Drivers/CMSIS/Device/ST/STM32F4xx/Include/: stm32f4xx.h
firmware/devices/HardwareInterface/board/USB_DEVICE/App/: usbd_desc.c
firmware/devices/HardwareInterface/board/cmake/: gcc-arm-none-eabi.cmake
firmware/devices/HardwareInterface/board/cmake/stm32cubemx/: CMakeLists.txt
firmware/devices/HardwareInterface/config/: config.h  debug_config,h  debug_config.h
firmware/libraries/common/: logger.c  thread_safe_can.c  thread_safe_i2c.c
firmware/libraries/common/include/: callback_wrapper.hpp  logger.c  logger.h  thread_safe_can.h  thread_safe_i2c.h
firmware/libraries/drivers/: rc_receiver.cpp  servo.cpp  vesc.cpp
firmware/libraries/drivers/include/: crsf_protocol.hpp  rc_receiver.hpp  servo.hpp  vesc.hpp  vesc_protocol.hpp
firmware/libraries/drivers/interfaces/: driver.hpp
firmware/libraries/microros/static_library/: generate_lib.sh  toolchain.cmake
firmware/libraries/trace_recorder/: CMakeLists.txt
firmware/libraries/trace_recorder/config/: trcConfig.h  trcStreamingConfig.h
firmware/libraries/trace_recorder/kernelports/FreeRTOS/: trcKernelPort.c
firmware/libraries/trace_recorder/kernelports/FreeRTOS/config/: trcKernelPortConfig.h
firmware/libraries/trace_recorder/streamports/STM32_USB_CDC/: trcStreamPort.c
firmware/libraries/trace_recorder/streamports/STM32_USB_CDC/config/: trcStreamPortConfig.h
firmware/toolchain/: firmware_common.cmake  openocd.cfg
